syntax = "proto3";

package service;


//Services
service BlackHoleService{
        rpc Put(PutReq) returns(Resp){}
}

// Request helper messages
message Strategy {
        string type = 1;
        string kind = 2;
}

message KV {
        string key = 1;
        string value = 2;
}

message Selector {
        string cmp_kind = 1;
        repeated KV labels = 2;
}

message Data {
        string kind = 1;
        repeated string value = 2;
}

message Metadata {
        string taskName = 1;
        int64 timestamp = 2;
        string namespace = 3;
        bool forceNamespaceQueue = 4;
        string queue = 5;
}

message PutTask {
        string region_id = 1;
        string cluster_id = 2;

        Strategy strategy = 3;
        Selector selector = 4;
        Data data = 5;
}

// Reques messages
message PutReq {
        string version = 1;
        string user_id = 2;
        string kind = 3;

        Metadata mtdata = 4;
        repeated PutTask tasks = 5;
}

message Task {
        string user_id = 1;
        string kind = 2;
        int64 timestamp = 3;
        string namespace = 4;
        PutTask task = 5;
}


// Response message
message Resp {
        string msg = 1;
}